--- a/sass/02-components/_nav.scss
+++ b/sass/02-components/_nav.scss
@@ -324,9 +324,10 @@ nav.section .heading a:hover,
       background:rgba(255,255,255,0.3);}
   nav.nav-desktop-dropdown .sub-menu .menu-item-has-children a::after{
     display:none;}
-  /* if a top-level dropdown menu item with a submenu is last,
-  re-align the dropdown to prevent it from going offscreen */
-  nav.nav-desktop-dropdown .menu-item-has-children:last-child .sub-menu {
+  /* if a top-level dropdown menu item with a submenu is last or second-to-last,
+  re-align the dropdown so it doesn't go offscreen */
+  nav.nav-desktop-dropdown .menu-item-has-children:nth-last-child(2) .sub-menu,
+  nav.nav-desktop-dropdown .menu-item-has-children:last-child .sub-menu{
     left:auto;
     right:0;}
 
