--- a/sass/08-language/_en.scss
+++ b/sass/08-language/_en.scss
@@ -5,7 +5,7 @@
 .en{
 
   nav.nav-desktop-dropdown a{
-    font-size:0.82em;
+    font-size:0.75em;
     letter-spacing:$default-caps-letterspace-calc;
     text-transform:uppercase;}
   nav.nav-desktop-dropdown .sub-menu a{
